--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <url>http://smigo.se:8080/manager/text</url>
+                    <url>http://smigo.se/manager/text</url>
                     <server>GlesysTomcatServer</server>
                     <path>/</path>
                 </configuration>
